--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ plugin_repo=libs-release
 dependency_repo=libs-snapshot
 buildInfo.licenseControl.runChecks=true
 buildInfo.licenseControl.autoDiscover=true
-buildInfo.build.name=com.dell.isg.smi:commons-elm
+buildInfo.build.name=com.github.nortonluo:commons-elm
 systemProp.sonar.host.url=https://sonarqube.com
 systemProp.sonar.organization=rackhd-smi
 systemProp.sonar.login=##sonarqubeLogin-placeholder##
